--- a/packages/2.x/Autoload.html
+++ b/packages/2.x/Autoload.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Autoload.html
         </tr>
     </table>
 </nav>
-<h1 id="2-3">2.3. Aura.Autoload</h1>
+<div id="section-main"><h1 id="2-3">2.3. Aura.Autoload</h1>
 <p>Provides a full PSR-4 and limited PSR-0 autoloader. Although it is
 installable via Composer, its best use is probably outside a Composer-oriented
 project.</p>
@@ -137,7 +137,7 @@ var_dump($loader-&gt;getDebug());
 // )
 ?&gt;
 </code></pre>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
