--- a/packages/2.x/Cli.html
+++ b/packages/2.x/Cli.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Cli.html
         </tr>
     </table>
 </nav>
-<h1 id="2-4">2.4. Aura.Cli</h1>
+<div id="section-main"><h1 id="2-4">2.4. Aura.Cli</h1>
 <p>Provides the equivalent of request ( <em>Context</em> ) and response ( <em>Stdio</em> )
 objects for the command line interface, including <em>Getopt</em> support, and an
 independent <em>Help</em> object for describing commands.</p>
@@ -438,7 +438,7 @@ reverse     reverse the current text and background colors
 </code></pre>
 <p>For example, to set bold white text on a red background, add <code>&lt;&lt;bold white redbg&gt;&gt;</code>
 into your output or error string. Reset back to normal with <code>&lt;&lt;reset&gt;&gt;</code>.</p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
