--- a/packages/2.x/Includer.html
+++ b/packages/2.x/Includer.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Includer.html
         </tr>
     </table>
 </nav>
-<h1 id="2-9">2.9. Aura.Includer</h1>
+<div id="section-main"><h1 id="2-9">2.9. Aura.Includer</h1>
 <p>Provides a facility to include multiple files from specified directories, in
 order, with variables extracted into a limited include scope.</p>
 <h2 id="2-9-1">2.9.1. Foreword</h2>
@@ -237,7 +237,7 @@ $includer-&gt;load(); // uses the cache file if it exists
 <p>Sometimes it will be useful to see what files the <em>Includer</em> actually found.
 Use the <code>getDebug()</code> method to return an array of information about what
 the <em>Includer</em> found, in what order, and in what mode.</p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
