--- a/packages/2.x/Router.html
+++ b/packages/2.x/Router.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Router.html
         </tr>
     </table>
 </nav>
-<h1 id="2-10">2.10. Aura.Router</h1>
+<div id="section-main"><h1 id="2-10">2.10. Aura.Router</h1>
 <p>Provides a web router implementation: given a URL path and a copy of
 <code>$_SERVER</code>, it will extract path-info and <code>$_SERVER</code> values for a specific
 route.</p>
@@ -714,7 +714,7 @@ $action($params);
 </code></pre>
 <p>With the above example action, the URL <code>/blog/read/1.json</code> will send JSON
 ouput, but for <code>/blog/read/1</code> it will send plain text output.</p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
