--- a/packages/2.x/Session.html
+++ b/packages/2.x/Session.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Session.html
         </tr>
     </table>
 </nav>
-<h1 id="2-11">2.11. Aura Session</h1>
+<div id="section-main"><h1 id="2-11">2.11. Aura Session</h1>
 <p>Provides session management functionality, including lazy session starting,
 session segments, next-request-only ("flash") values, and CSRF tools.</p>
 <h2 id="2-11-1">2.11.1. Foreword</h2>
@@ -254,7 +254,7 @@ $session-&gt;setCookieParams(array('lifetime' =&gt; '1209600'));
 <blockquote>
 <p>N.b: The <code>setCookieParams</code> method calls <a href="http://php.net/session_set_cookie_params">session_set_cookie_params</a> internally.</p>
 </blockquote>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
