--- a/packages/2.x/SqlQuery.html
+++ b/packages/2.x/SqlQuery.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/SqlQuery.html
         </tr>
     </table>
 </nav>
-<h1 id="2-13">2.13. Aura.SqlQuery</h1>
+<div id="section-main"><h1 id="2-13">2.13. Aura.SqlQuery</h1>
 <p>Provides query builders for MySQL, Postgres, SQLite, and Microsoft SQL Server.
 These builders are independent of any particular database connection library,
 although <a href="http://php.net/PDO">PDO</a> in general is recommended.</p>
@@ -620,7 +620,7 @@ turns out to be not as great as it seems in theory. This assessment is the
 result of the hard trials of experience. For those of you who want modifiable
 table prefixes, we suggest using constants with your table names prefixed as
 desired; as the prefixes change, you can then change your constants.</p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
