--- a/packages/2.x/View.html
+++ b/packages/2.x/View.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/View.html
         </tr>
     </table>
 </nav>
-<h1 id="2-15">2.15. Aura View</h1>
+<div id="section-main"><h1 id="2-15">2.15. Aura View</h1>
 <p>This package provides an implementation of the <a href="http://martinfowler.com/eaaCatalog/templateView.html">TemplateView</a> and
 <a href="http://martinfowler.com/eaaCatalog/twoStepView.html">TwoStepView</a> patterns using PHP itself as the templating language. It supports both file-based and closure-based templates along with helpers and sections.</p>
 <p>It is preceded by systems such as
@@ -350,7 +350,7 @@ $view_registry-&gt;set('browse', '/path/to/views/browse.php');
 $layout_registry = $view-&gt;getLayoutRegistry();
 $layout_registry-&gt;set('default', '/path/to/layouts/default.php');
 </code></pre>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
