--- a/packages/2.x/Web.html
+++ b/packages/2.x/Web.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Web.html
         </tr>
     </table>
 </nav>
-<h1 id="2-16">2.16. Aura.Web</h1>
+<div id="section-main"><h1 id="2-16">2.16. Aura.Web</h1>
 <p>Provides web <em>Request</em> and <em>Response</em> objects for use by web controllers and
 actions. These are representations of the PHP web environment, not HTTP request
 and response objects proper.</p>
@@ -122,7 +122,7 @@ related to Location and Status</li>
 prefer, <a href="README-RESPONSE.md#sending-the-response">including plain PHP</a>.</p>
 <p>Be sure to read the <a href="README-REQUEST.md">Request</a> and
 <a href="README-RESPONSE.md">Response</a> pages for more detailed information.</p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
