--- a/packages/3.x/Di/index.html
+++ b/packages/3.x/Di/index.html
@@ -78,7 +78,7 @@ permalink: /packages/3.x/Di/
 </dl></dd>
 </dl></dd>
 </dl>
-
+<div id="section-main"></div>
 <nav class="navfooter">
     <table>
         <tr>
