--- a/packages/3.x/Di/migrating.html
+++ b/packages/3.x/Di/migrating.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Di/migrating.html
         </tr>
     </table>
 </nav>
-<h1 id="1-1-10">1.1.10. Migrating from 2.x to 3.x</h1>
+<div id="section-main"><h1 id="1-1-10">1.1.10. Migrating from 2.x to 3.x</h1>
 <p>Aura.Di 3.x is largely similar to 2.x, but there are some backwards-compatibility breaks, as well as some new features.</p>
 <h2 id="1-1-10-1">1.1.10.1. BC Breaks</h2>
 <h3 id="1-1-10-1-1">1.1.10.1.1. Instantiation</h3>
@@ -66,7 +66,7 @@ $di = $container_builder-&gt;newConfiguredInstance([
 <p>Here the value assigned to <code>matcher</code> is taken from the <a href="https://github.com/auraphp/Aura.Router/blob/3.0.0/src/RouterContainer.php#L263-L273">RouterContainer</a> <code>getMatcher()</code> method.</p>
 <h3 id="1-1-10-2-2">1.1.10.2.2. Instance Factories</h3>
 <p>An instance factory creates multiple instances of the same class; <a href="http://auraphp.com/packages/3.x/Di/factories.html">refer the docs</a> for more information.</p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
