--- a/packages/3.x/Intl.html
+++ b/packages/3.x/Intl.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Intl.html
         </tr>
     </table>
 </nav>
-<h1 id="1-2">1.2. Aura.Intl</h1>
+<div id="section-main"><h1 id="1-2">1.2. Aura.Intl</h1>
 <p>The Aura.Intl package provides internationalization (I18N) tools, specifically
 package-oriented per-locale message translation.</p>
 <h2 id="1-2-1">1.2.1. Getting Started</h2>
@@ -197,7 +197,7 @@ echo $translator-&gt;translate('PAGE', [
 <p>Note that you can use other tokens within a pluralized token string to build
 more complex messages. For more information, see the following:</p>
 <p><a href="http://icu-project.org/apiref/icu4j/com/ibm/icu/text/MessageFormat.html">http://icu-project.org/apiref/icu4j/com/ibm/icu/text/MessageFormat.html</a></p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
