--- a/packages/3.x/Router/generating-paths.html
+++ b/packages/3.x/Router/generating-paths.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Router/generating-paths.html
         </tr>
     </table>
 </nav>
-<h1 id="1-4-4">1.4.4. Generating Paths From Routes</h1>
+<div id="section-main"><h1 id="1-4-4">1.4.4. Generating Paths From Routes</h1>
 <p>To generate a path from a route so that you can create links, first retrieve the <em>Generator</em> from the <em>RouterContainer</em>.</p>
 <pre><code class="language-php">&lt;?php
 $generator = $routerContainer-&gt;getGenerator();
@@ -67,7 +67,7 @@ $link = $generator-&gt;generate('wild_post', [
 ]); // "/post/88/foo/bar/baz"
 ?&gt;
 </code></pre>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
