--- a/packages/3.x/Router/index.html
+++ b/packages/3.x/Router/index.html
@@ -70,7 +70,7 @@ permalink: /packages/3.x/Router/
 <dt>1.4.7.4. <a href="/packages/3.x/Router/other-topics.html#1-4-7-4">Route Helpers</a></dt>
 </dl></dd>
 </dl>
-
+<div id="section-main"></div>
 <nav class="navfooter">
     <table>
         <tr>
