--- a/packages/3.x/Sql/getting-started.html
+++ b/packages/3.x/Sql/getting-started.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Sql/getting-started.html
         </tr>
     </table>
 </nav>
-<h1 id="1-5-1">1.5.1. Getting Started</h1>
+<div id="section-main"><h1 id="1-5-1">1.5.1. Getting Started</h1>
 <h2 id="1-5-1-1">1.5.1.1. Instantiation</h2>
 <p>You can instantiate <em>ExtendedPdo</em> so that it uses lazy connection, or you can
 use <em>DecoratedPdo</em> to decorate an existing <em>PDO</em> instance.</p>
@@ -127,7 +127,7 @@ echo $sth-&gt;queryString;
 </code></pre>
 <p>Finally, note that array quoting works only via the <code>perform()</code> method,
 not on returned <em>PDOStatement</em> instances.</p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
