--- a/packages/3.x/Sql/index.html
+++ b/packages/3.x/Sql/index.html
@@ -59,7 +59,7 @@ permalink: /packages/3.x/Sql/
 <dt>1.5.6.4. <a href="/packages/3.x/Sql/upgrade.html#1-5-6-4">Miscellaneous</a></dt>
 </dl></dd>
 </dl>
-
+<div id="section-main"></div>
 <nav class="navfooter">
     <table>
         <tr>
