--- a/packages/3.x/index.html
+++ b/packages/3.x/index.html
@@ -160,7 +160,7 @@ permalink: /packages/3.x/
 </dl></dd>
 </dl></dd>
 </dl>
-
+<div id="section-main"></div>
 <nav class="navfooter">
     <table>
         <tr>
