--- a/packages/index.html
+++ b/packages/index.html
@@ -171,7 +171,7 @@ permalink: /packages/
 </dl></dd>
 </dl></dd>
 </dl>
-
+<div id="section-main"></div>
 <nav class="navfooter">
     <table>
         <tr>
