--- a/packages/2.x/Auth.html
+++ b/packages/2.x/Auth.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Auth.html
         </tr>
     </table>
 </nav>
-<h1 id="2-2">2.2. Aura.Auth</h1>
+<div id="section-main"><h1 id="2-2">2.2. Aura.Auth</h1>
 <p>Provides authentication functionality and session tracking using various adapters; currently supported adapters are:</p>
 <ul>
 <li>Apache htpasswd files</li>
@@ -37,7 +37,7 @@ permalink: /packages/2.x/Auth.html
 <p><a href="https://scrutinizer-ci.com/g/auraphp/Aura.Auth/?branch=develop-2"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Auth/badges/quality-score.png?b=develop-2" alt="Scrutinizer Code Quality"></a>
 <a href="https://scrutinizer-ci.com/g/auraphp/Aura.Auth/?branch=develop-2"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Auth/badges/coverage.png?b=develop-2" alt="Code Coverage"></a>
 <a href="https://travis-ci.org/auraphp/Aura.Auth"><img src="https://travis-ci.org/auraphp/Aura.Auth.png?branch=develop-2" alt="Build Status"></a></p>
-<p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>, and <a href="http://phpunit.de/manual/">PHPUnit</a> to be available as <code>phpunit</code>.</p>
+<p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>vendor/bin/phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>.</p>
 <p>This library attempts to comply with <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-1-basic-coding-standard.md">PSR-1</a>, <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md">PSR-2</a>, and <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-4-autoloader.md">PSR-4</a>. If
 you notice compliance oversights, please send a patch via pull request.</p>
 <h3 id="2-2-1-3">2.2.1.3. Community</h3>
@@ -806,7 +806,7 @@ $di-&gt;params['Aura\Auth\Adapter\PdoAdapter'] = array(
 );
 ?&gt;
 </code></pre>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
