--- a/packages/2.x/Filter.html
+++ b/packages/2.x/Filter.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Filter.html
         </tr>
     </table>
 </nav>
-<h1 id="2-7">2.7. Aura.Filter</h1>
+<div id="section-main"><h1 id="2-7">2.7. Aura.Filter</h1>
 <p>This package provides tools to validate and sanitize objects and arrays.</p>
 <h2 id="2-7-1">2.7.1. Foreword</h2>
 <h3 id="2-7-1-1">2.7.1.1. Installation</h3>
@@ -29,7 +29,7 @@ permalink: /packages/2.x/Filter.html
 <p><a href="https://scrutinizer-ci.com/g/auraphp/Aura.Filter/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Filter/badges/quality-score.png?b=2.x" alt="Scrutinizer Code Quality"></a>
 <a href="https://scrutinizer-ci.com/g/auraphp/Aura.Filter/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Filter/badges/coverage.png?b=2.x" alt="Code Coverage"></a>
 <a href="https://travis-ci.org/auraphp/Aura.Filter"><img src="https://travis-ci.org/auraphp/Aura.Filter.png?branch=2.x" alt="Build Status"></a></p>
-<p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>, and <a href="http://phpunit.de/manual/">PHPUnit</a> to be available as <code>phpunit</code>.</p>
+<p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>./vendor/bin/phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>.</p>
 <p>This library attempts to comply with <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-1-basic-coding-standard.md">PSR-1</a>, <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md">PSR-2</a>, and <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-4-autoloader.md">PSR-4</a>. If
 you notice compliance oversights, please send a patch via pull request.</p>
 <h3 id="2-7-1-3">2.7.1.3. Community</h3>
@@ -39,7 +39,7 @@ follow <a href="http://twitter.com/auraphp">@auraphp on Twitter</a>, or chat wit
 on #auraphp on Freenode.</p>
 <h2 id="2-7-2">2.7.2. Documentation</h2>
 <p>This package is fully documented <a href="./docs/index.md">here</a>.</p>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
