--- a/packages/2.x/Html.html
+++ b/packages/2.x/Html.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Html.html
         </tr>
     </table>
 </nav>
-<h1 id="2-8">2.8. Aura.Html</h1>
+<div id="section-main"><h1 id="2-8">2.8. Aura.Html</h1>
 <p>Provides HTML escapers and helpers, including form input helpers, that can be used in any template, view, or presentation system.</p>
 <h2 id="2-8-1">2.8.1. Foreword</h2>
 <h3 id="2-8-1-1">2.8.1.1. Installation</h3>
@@ -207,7 +207,7 @@ $j = $this-&gt;escape()-&gt;js;
 
 &lt;/body&gt;
 </code></pre>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
