--- a/packages/2.x/Accept.html
+++ b/packages/2.x/Accept.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Accept.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="2-1">2.1. Aura.Accept</h1>
+<h1 id="2-1">2.1. Aura.Accept</h1>
 <p>Provides content-negotiation tools using <code>Accept*</code> headers.</p>
 <h2 id="2-1-1">2.1.1. Foreword</h2>
 <h3 id="2-1-1-1">2.1.1.1. Installation</h3>
@@ -208,7 +208,7 @@ $language = $accept-&gt;negotiateLanguage($available_languages);
 echo $language-&gt;getValue(); // pt-BR
 ?&gt;
 </code></pre>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
