--- a/packages/2.x/Di.html
+++ b/packages/2.x/Di.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Di.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="2-5">2.5. Aura.Di</h1>
+<h1 id="2-5">2.5. Aura.Di</h1>
 <p>The Aura.Di package provides a dependency injection container system with the
 following features:</p>
 <ul>
@@ -472,7 +472,7 @@ class Common extends Config
 </ul>
 <h3 id="2-5-2-11">2.5.2.11. Conclusion</h3>
 <p>If we construct our dependencies properly with params, setters, services, and factories, we will only need to get one object directly from the <em>Container</em> in our bootstrap file. All object creation will then occur within <em>Container</em> itself or the various factory objects. We will never need to use the <em>Container</em> itself in any of our application objects.</p>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
