--- a/packages/2.x/Dispatcher.html
+++ b/packages/2.x/Dispatcher.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Dispatcher.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="2-6">2.6. Aura.Dispatcher</h1>
+<h1 id="2-6">2.6. Aura.Dispatcher</h1>
 <p>Provides tools to map arbitrary names to dispatchable objects, then to
 dispatch to those objects using named parameters. This is useful for invoking
 controller and command objects based on path-info parameters or command line
@@ -438,7 +438,7 @@ $result = $dispatcher($params); // or call __invoke() directly
 echo $result; // "Read blog entry 88"
 ?&gt;
 </code></pre>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
