--- a/packages/2.x/Filter.html
+++ b/packages/2.x/Filter.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Filter.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="2-7">2.7. Aura.Filter</h1>
+<h1 id="2-7">2.7. Aura.Filter</h1>
 <p>This package provides tools to validate and sanitize objects and arrays.</p>
 <h2 id="2-7-1">2.7.1. Foreword</h2>
 <h3 id="2-7-1-1">2.7.1.1. Installation</h3>
@@ -39,7 +39,7 @@ follow <a href="http://twitter.com/auraphp">@auraphp on Twitter</a>, or chat wit
 on #auraphp on Freenode.</p>
 <h2 id="2-7-2">2.7.2. Documentation</h2>
 <p>This package is fully documented <a href="./docs/index.md">here</a>.</p>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
