--- a/packages/2.x/Sql.html
+++ b/packages/2.x/Sql.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Sql.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="2-12">2.12. Aura.Sql</h1>
+<h1 id="2-12">2.12. Aura.Sql</h1>
 <p>Provides an extension to the native <a href="http://php.net/PDO">PDO</a> along with a
 profiler and connection locator. Because <em>ExtendedPdo</em> is an extension of the
 native <em>PDO</em>, code already using the native <em>PDO</em> or typehinted to the native
@@ -507,7 +507,7 @@ $write = array(
 $connections = new ConnectionLocator($default, $read, $write);
 ?&gt;
 </code></pre>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
