--- a/packages/2.x/SqlSchema.html
+++ b/packages/2.x/SqlSchema.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/SqlSchema.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="2-14">2.14. Aura.SqlSchema</h1>
+<h1 id="2-14">2.14. Aura.SqlSchema</h1>
 <p>Provides facilities to read table names and table columns from a database
 using a <a href="http://php.net/PDO">PDO</a> connection.</p>
 <h2 id="2-14-1">2.14.1. Foreword</h2>
@@ -108,7 +108,7 @@ automatically.</p>
 <p><code>primary</code>: (bool) Is the column part of the primary key?</p>
 </li>
 </ul>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
