--- a/packages/3.x/Di/factories.html
+++ b/packages/3.x/Di/factories.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Di/factories.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-1-7">1.1.7. Instance Factories</h1>
+<h1 id="1-1-7">1.1.7. Instance Factories</h1>
 <p>Occasionally, a class will need to receive not just an instance, but a factory that is capable of creating a new instance over and over.  For example, say we have a class like the following:</p>
 <pre><code class="language-php">class ExampleNeedsFactory
 {
@@ -51,7 +51,7 @@ class ExampleStruct
 </code></pre>
 <p>Note that the arguments passed to the factory <code>__invoke()</code> method will be passed to the underlying instance constructor sequentially, not by name. This means the <code>__invoke()</code> method works more like the native <code>new</code> keyword, and not like <code>$di-&gt;lazyNew()</code>.  These arguments override any <code>$di-&gt;params</code> values that have been set for the class being factoried; without the overrides, all existing <code>$di-&gt;params</code> values for that class will be honored. (Values from <code>$di-&gt;setter</code> for the class will also be honored, but cannot be overridden.)</p>
 <p>Do not feel limited by the <em>Factory</em> implementation. We can create and inject factory objects of our own if we like. The <em>Factory</em> returned by the <code>$di-&gt;newFactory()</code> method is an occasional convenience, nothing more.</p>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
