--- a/packages/3.x/Di/inheritance.html
+++ b/packages/3.x/Di/inheritance.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Di/inheritance.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-1-4">1.1.4. Class, Interface, and Trait Inheritance</h1>
+<h1 id="1-1-4">1.1.4. Class, Interface, and Trait Inheritance</h1>
 <blockquote>
 <p>N.b.: When specifying fully-qualified class names, <strong>do not</strong> include the leading namespace separator. Doing so may lead to unexpected behavior. In other words, always use <code>ClassName</code> and never use <code>\ClassName</code>.</p>
 </blockquote>
@@ -96,7 +96,7 @@ $di-&gt;setters['ExampleBarInterface']['setBar'] = 'bar_value';
 </code></pre>
 <p>When we call <code>$di-&gt;newInstance('Example')</code>, those setter methods will be called by the <em>Container</em> with those values.</p>
 <p>Note that if we have class-specific <code>$di-&gt;setter</code> values, those will take precedence over the trait and interface setter values.</p>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
