--- a/packages/3.x/Di/lazy.html
+++ b/packages/3.x/Di/lazy.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Di/lazy.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-1-6">1.1.6. Lazy Injection</h1>
+<h1 id="1-1-6">1.1.6. Lazy Injection</h1>
 <p>Unlike the <code>newInstance()</code> and <code>get()</code> methods, calling one of the <code>lazy*()</code> methods on the <em>Container</em> will <em>not</em> lock the <em>Container</em>. Using lazy injection is the preferred and recommended way to defines object values for <code>$params</code> and <code>$setters</code>, and to define services.</p>
 <h2 id="1-1-6-1">1.1.6.1. Lazy Instances</h2>
 <p>Thus far, we have used <code>newInstance()</code> to create objects through the <em>Container</em>.
@@ -101,7 +101,7 @@ return [
 $di-&gt;params['Example2']['data'] = $di-&gt;lazyRequire('/path/to/data.php');
 </code></pre>
 <h2 id="1-1-6-5">1.1.6.5. Lazy Array</h2>
-<p>Sometimes you'll be working with code that expects an array of objects. If you want to have the objects within the array to be lazy you can use the <code>$di-&gt;lazyArray()</code> method. This will iterate through your array and resolve any lazy objects before returning the array.</p>
+<p>Sometimes you'll be working with code that expects an array of objects. If you want the objects within the array to be lazy, you can use the <code>$di-&gt;lazyArray()</code> method. This will iterate through your array and resolve any lazy objects before returning the array.</p>
 <pre><code class="language-php">$di-&gt;setters['Example']['addFoos'] = $di-&gt;lazyArray([
     $di-&gt;lazyNew('FirstFoo'),
     $di-&gt;lazyNew('SecondFoo'),
@@ -112,6 +112,21 @@ $di-&gt;setters['Example']['addBars'] = $di-&gt;lazyArray([
     $di-&gt;lazyArray(['name1', $di-&gt;lazyNew('FirstBar'), 'en']),
     $di-&gt;lazyArray(['name2', $di-&gt;lazyNew('SecondFoo'), 'es']),
 ]);
+</code></pre>
+<p>LazyArray extends <a href="http://php.net/manual/en/class.arrayobject.php">ArrayObject</a> so if you need to modify the LazyArray after you've assigned it you can use any of the <code>ArrayObject</code> methods.</p>
+<pre><code class="language-php">$di-&gt;setters['Example']['addFoos'] = $di-&gt;lazyArray([]);
+
+// Append to array
+$di-&gt;setters['Example']['addFoos']-&gt;append($di-&gt;lazyNew('SecondFoo'));
+
+// Get a copy of the internal array
+$copy = $di-&gt;setters['Example']['addFoos']-&gt;getArrayCopy();
+
+// Manipulate the array
+array_unshift($copy, $di-&gt;lazyNew('FirstFoo'));
+
+// Reassign with new array
+$di-&gt;setters['Example']['addFoos'] = $di-&gt;lazyArray($copy);
 </code></pre>
 <h2 id="1-1-6-6">1.1.6.6. Lazy Callable</h2>
 <p>Sometimes you'll be working with code that deals with callables. This code may expect to invoke the callable once, or many times. If you wanted to use a service in this situation, you can use the <code>lazyCallable</code> method. This will produce a callable that will lazily resolve other lazies, and ensure that all calls to the service are made appropriately.</p>
@@ -150,7 +165,7 @@ $di-&gt;set('service', $di-&gt;lazy([$di-&gt;lazyNew('ServiceClass'), 'methodNam
 ));
 </code></pre>
 <p>Beware of relying on generic Lazy calls too much; if we do, it probably means we need to separate our configuration concerns better than we are currently doing.</p>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
