--- a/packages/3.x/Di/services.html
+++ b/packages/3.x/Di/services.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Di/services.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-1-5">1.1.5. Services</h1>
+<h1 id="1-1-5">1.1.5. Services</h1>
 <p>A "service" is an object stored in the <em>Container</em> under a unique name. Any time you <code>get()</code> the named service, you always get back the same object instance.</p>
 <pre><code class="language-php">// define the Example class
 class Example
@@ -39,7 +39,7 @@ var_dump($service1 === $service2); // true
 <blockquote>
 <p>N.b.: If you try to access <code>$params</code> or <code>$setters</code>, or to call <code>set()</code>, after calling <code>get()</code> or after locking the <em>Container</em> using the <code>lock()</code> method, the <em>Container</em> will throw an exception. This is to prevent modifying the params after objects have been created. Thus, be sure to set up all params for all objects before creating an object.</p>
 </blockquote>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
