--- a/packages/3.x/Router/attaching-route-groups.html
+++ b/packages/3.x/Router/attaching-route-groups.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Router/attaching-route-groups.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-4-3">1.4.3. Attaching Route Groups</h1>
+<h1 id="1-4-3">1.4.3. Attaching Route Groups</h1>
 <p>You can add a series of routes under a single master path in the <em>Map</em> using the <code>Map::attach()</code> method with a name prefix, path prefix, and a callable to perform the attachment logic.  The callable must take a <em>Map</em> as its only argument.</p>
 <p>For example, if you want all your blog-related routes to be mounted at <code>/blog</code> in your application, and all of their names to be prefixed with <code>blog.</code>, you can do the following:</p>
 <pre><code class="language-php">&lt;?php
@@ -63,7 +63,7 @@ will be prefixed with <code>/blog</code>, so the effective route names and paths
 </li>
 </ul>
 <p>Any defaults you set on the <code>$map</code> inside the callable will revert to their previous values when the callable is complete.</p>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
