--- a/packages/3.x/Router/custom-matching.html
+++ b/packages/3.x/Router/custom-matching.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Router/custom-matching.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-4-6">1.4.6. Custom Matching Rules</h1>
+<h1 id="1-4-6">1.4.6. Custom Matching Rules</h1>
 <h2 id="1-4-6-1">1.4.6.1. Writing A Custom Rule</h2>
 <p>Writing a custom matching rule, say one that checks the authentication state, is a bit involved but not difficult.</p>
 <ol>
@@ -106,7 +106,7 @@ $routerContainer-&gt;getRuleIterator()-&gt;set([
     new Rule\Allows(),
 ]);
 </code></pre>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
