--- a/packages/3.x/Router/getting-started.html
+++ b/packages/3.x/Router/getting-started.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Router/getting-started.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-4-1">1.4.1. Getting Started</h1>
+<h1 id="1-4-1">1.4.1. Getting Started</h1>
 <p>Aura.Router is a web router implementation for PSR-7.</p>
 <p>You get all the router objects through a library-specific <em>RouterContainer</em>, which manages object creation, dependencies, and wiring for you. That means you need to instantiate the container before anything else.</p>
 <pre><code class="language-php">&lt;?php
@@ -216,7 +216,7 @@ echo $response-&gt;getBody();
 <pre><code>$ php -S localhost:8000 -t .
 </code></pre>
 <p>... and point your browser to <code>http://localhost:8000/blog/12</code> .</p>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
