--- a/packages/3.x/Router/other-topics.html
+++ b/packages/3.x/Router/other-topics.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Router/other-topics.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-4-7">1.4.7. Other Topics</h1>
+<h1 id="1-4-7">1.4.7. Other Topics</h1>
 <h2 id="1-4-7-1">1.4.7.1. Catchall Routes</h2>
 <p>You can use optional placeholder tokens to create a generic catchall route:</p>
 <pre><code class="language-php">&lt;?php
@@ -103,7 +103,7 @@ echo $routeRawHelper('blog.read', [
     'slug' =&gt; 'my title'
 ]); // "/path/to/subdir/blog/my title"
 </code></pre>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
