--- a/packages/3.x/Sql/fetch.html
+++ b/packages/3.x/Sql/fetch.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Sql/fetch.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-5-2">1.5.2. The <code>fetch*()</code> Methods</h1>
+<h1 id="1-5-2">1.5.2. The <code>fetch*()</code> Methods</h1>
 <p><em>ExtendedPdo</em> comes with <code>fetch*()</code> methods to help reduce boilerplate code.
 Instead of issuing <code>prepare()</code>, a series of <code>bindValue()</code> calls, <code>execute()</code>,
 and then <code>fetch*()</code> on a <em>PDOStatement</em>, you can bind values and fetch results
@@ -74,7 +74,7 @@ $result = $pdo-&gt;fetchValue($stm, $bind);
 $stm = "UPDATE test SET incr = incr + 1 WHERE foo = :foo AND bar = :bar";
 $row_count = $pdo-&gt;fetchAffected($stm, $bind);
 </code></pre>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
