--- a/packages/3.x/Sql/profiling-logging.html
+++ b/packages/3.x/Sql/profiling-logging.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Sql/profiling-logging.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-5-4">1.5.4. Profiling and Logging</h1>
+<h1 id="1-5-4">1.5.4. Profiling and Logging</h1>
 <p>It is often useful to see what queries have been executed, where they were
 issued from in the codebase, and how long they took to complete. As such,
 <em>ExtendedPdo</em> comes with a profiler that logs to any <a href="(https://packagist.org/providers/psr/log-implementation)">PSR-3 implementation</a>.
@@ -91,7 +91,7 @@ logging level with the <code>Profiler::setLogLevel()</code> method:</p>
 $pdo-&gt;getProfiler()-&gt;setLogLevel(LogLevel::INFO);
 </code></pre>
 <p>Likewise, you can get the current log level with <code>Profiler::getLogLevel()</code>.</p>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
