--- a/packages/3.x/Sql/upgrade.html
+++ b/packages/3.x/Sql/upgrade.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Sql/upgrade.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-5-6">1.5.6. 3.x Upgrade Notes</h1>
+<h1 id="1-5-6">1.5.6. 3.x Upgrade Notes</h1>
 <p>The vast majority of changes and breaks from the 2.x version are "under the
 hood," so to speak. The main functionality methods (<code>query()</code>, <code>exec()</code>,
 <code>perform()</code>, <code>fetch*()</code>, <code>yield*()</code>, etc.) are unchanged and work just the same
@@ -201,7 +201,7 @@ underlying PDO instance to make those methods available, if they exist.</p>
 should help keep unexpected output of stack traces from revealing credentials.</p>
 </li>
 </ul>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
