update packages and fix the filter documentation

--- a/packages/2.x/Auth.html
+++ b/packages/2.x/Auth.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Auth.html
         </tr>
     </table>
 </nav>
-<h1 id="2-2">2.2. Aura.Auth</h1>
+<div id="section-main"><h1 id="2-2">2.2. Aura.Auth</h1>
 <p>Provides authentication functionality and session tracking using various adapters; currently supported adapters are:</p>
 <ul>
 <li>Apache htpasswd files</li>
@@ -806,7 +806,7 @@ $di-&gt;params['Aura\Auth\Adapter\PdoAdapter'] = array(
 );
 ?&gt;
 </code></pre>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
