--- a/packages/2.x/Dispatcher.html
+++ b/packages/2.x/Dispatcher.html
@@ -14,11 +14,11 @@ permalink: /packages/2.x/Dispatcher.html
         <tr>
             <td class="prev"><a href="/packages/2.x/Di.html">Aura.Di</a></td>
             <td class="parent">2. Version 2.x</th>
-            <td class="next"><a href="/packages/2.x/Filter.html">Aura.Filter</a></td>
+            <td class="next"><a href="/packages/2.x/Filter/">Aura.Filter 2.x</a></td>
         </tr>
     </table>
 </nav>
-<h1 id="2-6">2.6. Aura.Dispatcher</h1>
+<div id="section-main"><h1 id="2-6">2.6. Aura.Dispatcher</h1>
 <p>Provides tools to map arbitrary names to dispatchable objects, then to
 dispatch to those objects using named parameters. This is useful for invoking
 controller and command objects based on path-info parameters or command line
@@ -438,18 +438,18 @@ $result = $dispatcher($params); // or call __invoke() directly
 echo $result; // "Read blog entry 88"
 ?&gt;
 </code></pre>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
             <td class="prev"><a href="/packages/2.x/Di.html">Prev</a></td>
             <td class="parent"><a href="/packages/2.x/">Up</a></td>
-            <td class="next"><a href="/packages/2.x/Filter.html">Next</a></td>
+            <td class="next"><a href="/packages/2.x/Filter/">Next</a></td>
         </tr>
         <tr>
             <td class="prev">2.5. Aura.Di</td>
             <td class="parent">2. Version 2.x</td>
-            <td class="next">2.7. Aura.Filter</td>
+            <td class="next">2.7. Aura.Filter 2.x</td>
         </tr>
     </table>
 </nav>
