--- a/packages/2.x/Html.html
+++ b/packages/2.x/Html.html
@@ -12,13 +12,13 @@ permalink: /packages/2.x/Html.html
             <th colspan="3" class="curr">2.8. Aura.Html</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/2.x/Filter.html">Aura.Filter</a></td>
+            <td class="prev"><a href="/packages/2.x/Filter/custom.html">Creating and Using Custom Rules</a></td>
             <td class="parent">2. Version 2.x</th>
             <td class="next"><a href="/packages/2.x/Includer.html">Aura.Includer</a></td>
         </tr>
     </table>
 </nav>
-<h1 id="2-8">2.8. Aura.Html</h1>
+<div id="section-main"><h1 id="2-8">2.8. Aura.Html</h1>
 <p>Provides HTML escapers and helpers, including form input helpers, that can be used in any template, view, or presentation system.</p>
 <h2 id="2-8-1">2.8.1. Foreword</h2>
 <h3 id="2-8-1-1">2.8.1.1. Installation</h3>
@@ -207,16 +207,16 @@ $j = $this-&gt;escape()-&gt;js;
 
 &lt;/body&gt;
 </code></pre>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
-            <td class="prev"><a href="/packages/2.x/Filter.html">Prev</a></td>
+            <td class="prev"><a href="/packages/2.x/Filter/custom.html">Prev</a></td>
             <td class="parent"><a href="/packages/2.x/">Up</a></td>
             <td class="next"><a href="/packages/2.x/Includer.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">2.7. Aura.Filter</td>
+            <td class="prev">2.7.6. Creating and Using Custom Rules</td>
             <td class="parent">2. Version 2.x</td>
             <td class="next">2.9. Aura.Includer</td>
         </tr>
