--- a/packages/index.html
+++ b/packages/index.html
@@ -108,10 +108,14 @@ permalink: /packages/
 <dt>2.6.5. <a href="/packages/2.x/Dispatcher.html#2-6-5">Construction-Based Configuration</a></dt>
 <dt>2.6.6. <a href="/packages/2.x/Dispatcher.html#2-6-6">Intercessory Dispatch Methods</a></dt>
 </dl></dd>
-<dt>2.7. <a href="/packages/2.x/Filter.html#2-7">Aura.Filter</a></dt>
+<dt>2.7. <a href="/packages/2.x/Filter/">Aura.Filter 2.x</a></dt>
 <dd><dl>
-<dt>2.7.1. <a href="/packages/2.x/Filter.html#2-7-1">Foreword</a></dt>
-<dt>2.7.2. <a href="/packages/2.x/Filter.html#2-7-2">Documentation</a></dt>
+<dt>2.7.1. <a href="/packages/2.x/Filter/getting-started.html#2-7-1">Getting Started</a></dt>
+<dt>2.7.2. <a href="/packages/2.x/Filter/value-filter.html#2-7-2">Filtering Individual Values</a></dt>
+<dt>2.7.3. <a href="/packages/2.x/Filter/subject-filter.html#2-7-3">Filtering Arrays and Objects</a></dt>
+<dt>2.7.4. <a href="/packages/2.x/Filter/validate.html#2-7-4">Rules To Validate Fields</a></dt>
+<dt>2.7.5. <a href="/packages/2.x/Filter/sanitize.html#2-7-5">Rules To Sanitize Fields</a></dt>
+<dt>2.7.6. <a href="/packages/2.x/Filter/custom.html#2-7-6">Creating and Using Custom Rules</a></dt>
 </dl></dd>
 <dt>2.8. <a href="/packages/2.x/Html.html#2-8">Aura.Html</a></dt>
 <dd><dl>
@@ -171,7 +175,7 @@ permalink: /packages/
 </dl></dd>
 </dl></dd>
 </dl>
-
+<div id="section-main"></div>
 <nav class="navfooter">
     <table>
         <tr>
