--- a/packages/2.x/Session.html
+++ b/packages/2.x/Session.html
@@ -18,7 +18,7 @@ permalink: /packages/2.x/Session.html
         </tr>
     </table>
 </nav>
-<h1 id="2-11">2.11. Aura Session</h1>
+<div id="section-main"><h1 id="2-11">2.11. Aura Session</h1>
 <p>Provides session management functionality, including lazy session starting,
 session segments, next-request-only ("flash") values, and CSRF tools.</p>
 <h2 id="2-11-1">2.11.1. Foreword</h2>
@@ -30,7 +30,7 @@ session segments, next-request-only ("flash") values, and CSRF tools.</p>
 <p><a href="https://scrutinizer-ci.com/g/auraphp/Aura.Session/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Session/badges/quality-score.png?b=develop-2" alt="Scrutinizer Code Quality"></a>
 <a href="https://scrutinizer-ci.com/g/auraphp/Aura.Session/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Session/badges/coverage.png?b=develop-2" alt="Code Coverage"></a>
 <a href="https://travis-ci.org/auraphp/Aura.Session"><img src="https://travis-ci.org/auraphp/Aura.Session.png?branch=develop-2" alt="Build Status"></a></p>
-<p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>, and <a href="http://phpunit.de/manual/">PHPUnit</a> to be available as <code>phpunit</code>.</p>
+<p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>vendor/bin/phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>.</p>
 <p>This library attempts to comply with <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-1-basic-coding-standard.md">PSR-1</a>, <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md">PSR-2</a>, and <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-4-autoloader.md">PSR-4</a>. If
 you notice compliance oversights, please send a patch via pull request.</p>
 <h3 id="2-11-1-3">2.11.1.3. Community</h3>
@@ -254,7 +254,7 @@ $session-&gt;setCookieParams(array('lifetime' =&gt; '1209600'));
 <blockquote>
 <p>N.b: The <code>setCookieParams</code> method calls <a href="http://php.net/session_set_cookie_params">session_set_cookie_params</a> internally.</p>
 </blockquote>
-
+</div>
 <nav class="navfooter">
     <table>
         <tr>
